# jpeg-turbo-buildware

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
